fixed multiline captions escaping text overflow

--- a/src/static/scripts/components/mediaViewer/_mediaViewer.scss
+++ b/src/static/scripts/components/mediaViewer/_mediaViewer.scss
@@ -24,6 +24,7 @@
 
 		.caption {
 			max-width: 60%;
+			max-height: vars.$controls-height;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
