--- a/src/static/style/_custom.scss
+++ b/src/static/style/_custom.scss
@@ -8,35 +8,35 @@ body {
 
 [data-tooltip] {
 	position: relative;
-}
 
-[data-tooltip]::after {
-	content: attr(data-tooltip);
-	font-size: .8rem;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 10000;
-	transform: translateX(-50%) translateY(-85%) scale(.5);
-	width: max-content;
-	line-height: normal;
-	margin-top: -0.2rem;
-	margin-left: 50%;
-	border-radius: .5rem;
-	padding: .3rem .5rem;
-	background: vars.$tooltip-bg;
-	color: vars.$text-color;
-	opacity: 0;
-	visibility: hidden;
-	transition: all .15s ease;
-	transition-delay: .15s;
-}
+	&::after {
+		content: attr(data-tooltip);
+		font-size: .8rem;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 10000;
+		transform: translateX(-50%) translateY(-85%) scale(.5);
+		width: max-content;
+		line-height: normal;
+		margin-top: -0.2rem;
+		margin-left: 50%;
+		border-radius: .5rem;
+		padding: .3rem .5rem;
+		background: vars.$tooltip-bg;
+		color: vars.$text-color;
+		opacity: 0;
+		visibility: hidden;
+		transition: all .15s ease;
+		transition-delay: .15s;
+	}
 
-[data-tooltip]:hover::after {
-	opacity: 1;
-	visibility: visible;
-	transform: translateX(-50%) translateY(-100%) scale(1);
-	transition-delay: 1s;
+	&:hover::after {
+		opacity: 1;
+		visibility: visible;
+		transform: translateX(-50%) translateY(-100%) scale(1);
+		transition-delay: 1s;
+	}
 }
 
 .disableTooltips [data-tooltip]::after {
